--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
@@ -18,6 +19,7 @@
     "express": "^4.18.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "helmet": "^6.0.1",
     "joi": "^17.7.0",
     "method-override": "^3.0.0",
